--- a/roles/pihole/templates/10-custom-dns.conf
+++ b/roles/pihole/templates/10-custom-dns.conf
@@ -1,4 +1,6 @@
 address=/pihole.home/{{ pihole.ipv4 }}
-{% if networks.enable_ipv6 %}
+{% if pihole.use_host_net %}
+address=/pihole.home/{{ host.ipv6 }}
+{% elif networks.pihole.v6.enable %}
 address=/pihole.home/{{ pihole.ipv6 }}
 {% endif %}
