--- a/handlers/services.yml
+++ b/handlers/services.yml
@@ -28,5 +28,10 @@
   service:
     name: dhcpcd
     state: restarted
-  register: restart_status
+  ignore_errors: yes
+
+- name: restart networking
+  service:
+    name: networking
+    state: restarted
   ignore_errors: yes
