--- a/roles/base_system/tasks/main.yml
+++ b/roles/base_system/tasks/main.yml
@@ -1,6 +1,6 @@
 - name: Install base packages
   apt:
-    name: [ 'python3', 'python3-dev', 'python3-pip', 'python-dev', 'bash-completion', 'git', 'htop', 'lsb-release', 'ncdu', 'tree', 'vim', 'wget', 'aptitude', 'fail2ban', 'net-tools', 'rsync', 'curl' ]
+    name: [ 'python3', 'python3-dev', 'python3-pip', 'python-dev', 'bash-completion', 'git', 'htop', 'lsb-release', 'ncdu', 'tree', 'vim', 'wget', 'aptitude', 'fail2ban', 'net-tools', 'rsync', 'curl', 'ntp' ]
     state: latest
     update_cache: yes
 
@@ -54,16 +54,17 @@
     name: unattended-upgrades
     state: latest
 
-- name: Configure DHCP Client
-  template:
-    src: dhcpcd.conf
-    dest: /etc/dhcpcd.conf
-  notify: restart dhcpcd
+- include: network.yml
+  #when: "'development' not in group_names"
+  tags: network
 
 - meta: flush_handlers
 
-- name: Setup swap
-  include: swap.yml
+- name: Set timezone
+  timezone:
+    name: Europe/Zurich
+
+- include: swap.yml
 
 - name: Update and upgrade packages
   apt:
