--- a/99_debug.yml
+++ b/99_debug.yml
@@ -1,8 +1,10 @@
-- hosts: production
+- hosts: development
   gather_facts: yes
   remote_user: root
   debugger: on_failed
 
+  roles:
+    - debug_role
 
   tasks:
     - name: Check if is rasbian
