--- a/roles/base_system/tasks/main.yml
+++ b/roles/base_system/tasks/main.yml
@@ -1,8 +1,28 @@
 - name: Install base packages
   apt:
-    name: [ 'python3', 'python3-dev', 'python3-pip', 'python-dev', 'bash-completion', 'git', 'htop', 'lsb-release', 'ncdu', 'tree', 'vim', 'wget', 'aptitude', 'fail2ban', 'net-tools', 'rsync', 'curl', 'ntp' ]
+    name: "{{ packages }}"
     state: latest
     update_cache: yes
+  vars:
+    packages:
+      - python3
+      - python3-dev
+      - python3-pip
+      - python-dev
+      - bash-completion
+      - git
+      - htop
+      - lsb-release
+      - ncdu
+      - tree
+      - vim
+      - wget
+      - aptitude
+      - fail2ban
+      - net-tools
+      - rsync
+      - curl
+      - ntp
 
 - name: Enable syntax highlighting in vim
   lineinfile:
@@ -55,7 +75,7 @@
     state: latest
 
 - include: network.yml
-  #when: "'development' not in group_names"
+  when: "'development' not in group_names"
   tags: network
 
 - meta: flush_handlers
