--- a/roles/vpn/tasks/main.yml
+++ b/roles/vpn/tasks/main.yml
@@ -40,16 +40,4 @@
     - restart openvpn
   tags: vpn_conf
 
-- name: Generate VPN CA Cert password
-  set_fact:
-    ca_cert_pw: "{{ lookup('template', 'standard_pw_gen.jinja2', template_vars=dict(name='vpn_ca_cert')) }}"
-
-- name: Generate VPN CA cert
-  expect:
-    command: "docker run -v {{ volumes.vpn.config.local_folder }}:{{ volumes.vpn.config.mount }} --rm -it kylemanna/openvpn ovpn_initpki"
-    responses:
-      'Enter New CA Key Passphrase:': "{{ ca_cert_pw }}"
-      'Re-Enter New CA Key Passphrase:': "{{ ca_cert_pw }}"
-      '\[Easy\-RSA\sCA\]:': "{{ openvpn.dns }}"
-      'Enter pass phrase for \/etc\/openvpn\/pki\/private\/ca\.key:': "{{ ca_cert_pw }}"
-    timeout: 3600
+- include: deploy_ca_cert.yml
