--- a/roles/new_ovpn_user/tasks/main.yml
+++ b/roles/new_ovpn_user/tasks/main.yml
@@ -8,13 +8,13 @@
 
 - name: Create VPN user
   expect:
-    command: "docker run -v {{ volumes.vpn.config.local_folder }}:/etc/openvpn --rm -it kylemanna/openvpn easyrsa build-client-full {{ vpn_username }}"
+    command: "docker run -e EASYRSA_KEY_SIZE=4096 -v {{ volumes.vpn.config.local_folder }}:{{ volumes.vpn.config.mount }} --rm -it kylemanna/openvpn easyrsa build-client-full {{ vpn_username }}"
     responses:
       'Enter PEM pass phrase:': "{{ user_cert_pw }}"
       'Enter pass phrase for \/etc\/openvpn\/pki\/private\/ca\.key:': "{{ ca_cert_pw }}"
 
 - name: Store OVPN profile in config directory
-  shell: "docker run -v {{ volumes.vpn.config.local_folder }}:/etc/openvpn --rm kylemanna/openvpn ovpn_getclient {{ vpn_username }} > {{ root_dirs.pihole }}/{{ vpn_username }}.ovpn"
+  shell: "docker run -v {{ volumes.vpn.config.local_folder }}:{{ volumes.vpn.config.mount }} --rm kylemanna/openvpn ovpn_getclient {{ vpn_username }} > {{ root_dirs.pihole }}/{{ vpn_username }}.ovpn"
 
 - name: Only route DNS through VPN
   lineinfile:
