--- a/roles/vpn/templates/openvpn.conf
+++ b/roles/vpn/templates/openvpn.conf
@@ -26,6 +26,11 @@ log  /var/log/openvpn.log
 
 user nobody
 group nogroup
+
+tls-cipher {{ openvpn.conf.tls_cipher }}
+cipher {{ openvpn.conf.cipher }}
+auth {{ openvpn.conf.auth }}
+
 comp-lzo no
 
 ### Route Configurations Below
