--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -70,6 +70,11 @@ openvpn:
   dns: vpn.realmar.net
 
   conf:
+    ca_cert_bits: 2048
+    tls_cipher: TLS-ECDHE-ECDSA-WITH-AES-256-GCM-SHA384
+    cipher: AES-256-GCM
+    auth: SHA3-512
+
     server:
       file: openvpn.conf
       netaddress: 192.168.255.0
