--- a/roles/vpn/tasks/main.yml
+++ b/roles/vpn/tasks/main.yml
@@ -20,8 +20,15 @@
 - include: build.openvpn.rpi.yml
   when: is_rasbian
 
+- name: Create VPN config folder
+  file:
+    path: "{{ volumes.vpn.config }}"
+    state: directory
+    owner: "{{ user }}"
+    group: "{{ user }}"
+
 - name: Generate OpenVPN config
-  shell: "docker run -v {{ volumes.vpn.config.local_folder }}:{{ volumes.vpn.config.mount }} --rm kylemanna/openvpn ovpn_genconfig -n {{ pihole.ipv4 }} -u udp://{{ openvpn.dns }}"
+  shell: "docker run -v {{ volumes.vpn.config.local_folder }}:{{ volumes.vpn.config.mount }} --rm kylemanna/openvpn ovpn_genconfig -n {{ pihole.ipv4 }} -u udp://{{ openvpn.dns }} -T {{ openvpn.conf.tls_cipher }} -C '{{ openvpn.conf.cipher }}' -a '{{ openvpn.conf.auth }}'"
 
 - name: Copy OpenVPN server conf
   template:
