--- a/roles/vpn/tasks/deploy_ca_cert.yml
+++ b/roles/vpn/tasks/deploy_ca_cert.yml
@@ -33,7 +33,7 @@
       responses:
         'Enter New CA Key Passphrase:': "{{ ca_cert_pw }}"
         'Re-Enter New CA Key Passphrase:': "{{ ca_cert_pw }}"
-        '\[Easy\-RSA\sCA\]:': "{{ openvpn.dns }}"
+        '\[Easy\-RSA\sCA\]:': "{{ openvpn.conf.dns }}"
         'Enter pass phrase for \/etc\/openvpn\/pki\/private\/ca\.key:': "{{ ca_cert_pw }}"
       timeout: 3600
   when: cert_dir_stat.stat.exists == false
