--- a/roles/vpn/tasks/main.yml
+++ b/roles/vpn/tasks/main.yml
@@ -28,7 +28,7 @@
     group: "{{ user }}"
 
 - name: Generate OpenVPN config
-  shell: "docker run -v {{ volumes.vpn.config.local_folder }}:{{ volumes.vpn.config.mount }} --rm kylemanna/openvpn ovpn_genconfig -n {{ pihole.ipv4 }} -u udp://{{ openvpn.dns }} -T {{ openvpn.conf.tls_cipher }} -C '{{ openvpn.conf.cipher }}' -a '{{ openvpn.conf.auth }}'"
+  shell: "docker run -v {{ volumes.vpn.config.local_folder }}:{{ volumes.vpn.config.mount }} --rm kylemanna/openvpn ovpn_genconfig -n {{ host.ipv4 if pihole.use_host_net else pihole.ipv4 }} -u udp://{{ openvpn.conf.dns }} -T {{ openvpn.conf.tls_cipher }} -C '{{ openvpn.conf.cipher }}' -a '{{ openvpn.conf.auth }}'"
 
 - name: Copy OpenVPN server conf
   template:
