--- a/roles/vpn/templates/openvpn.conf
+++ b/roles/vpn/templates/openvpn.conf
@@ -1,6 +1,15 @@
 {% import "pihole_ipam.jinja2" as pihole_ipam with context %}
 
 server {{ openvpn.conf.server.netaddress }} {{ openvpn.conf.server.netmask }}
+{% if networks.vpn.v6.enable %}
+{%   if openvpn.use_host_net %}
+server-ipv6 {{ networks.host.v6.subnet }}
+{%   else %}
+server-ipv6 {{ networks.vpn.v6.subnet }}
+{%   endif %}
+
+tun-ipv6
+{% endif %}
 
 verb 3
 
@@ -34,12 +43,20 @@ auth {{ openvpn.conf.auth }}
 comp-lzo no
 
 ### Route Configurations Below
+{% if pihole.use_host_net == false %}
 push "route {{ networks.pihole.v4.netaddress }} {{ networks.pihole.v4.netmask }}"
-{% if openvpn.conf.server.route_home_network %}
+{% endif %}
+{% if openvpn.conf.server.route_home_network or pihole.use_host_net %}
 push "route {{ networks.host.v4.netaddress }} {{ networks.host.v4.netmask }}"
+{%   if networks.vpn.v6.enable %}
+push "route-ipv6 {{ networks.host.v6.subnet }}"
+{%   endif %}
 {% endif %}
 
 ### Push Configurations Below
-# push "block-outside-dns"
+push "block-outside-dns"
 push "dhcp-option DNS {{ pihole_ipam.ipam.ipv4 }}"
+{% if networks.vpn.v6.enable %}
+push "dhcp-option DNS {{ pihole_ipam.ipam.ipv6 }}"
+{% endif %}
 push "comp-lzo no"
