--- a/roles/vpn/templates/openvpn.conf
+++ b/roles/vpn/templates/openvpn.conf
@@ -54,7 +54,7 @@ push "route-ipv6 {{ networks.host.v6.subnet }}"
 {% endif %}
 
 ### Push Configurations Below
-push "block-outside-dns"
+# push "block-outside-dns"
 push "dhcp-option DNS {{ pihole_ipam.ipam.ipv4 }}"
 {% if networks.vpn.v6.enable %}
 push "dhcp-option DNS {{ pihole_ipam.ipam.ipv6 }}"
