--- a/roles/vpn/templates/openvpn.conf
+++ b/roles/vpn/templates/openvpn.conf
@@ -43,14 +43,20 @@ auth {{ openvpn.conf.auth }}
 comp-lzo no
 
 ### Route Configurations Below
-{% if pihole.use_host_net == false %}
+{% if pihole.use_host_net %}
+push "route {{ networks.host.v4.netaddress }} {{ networks.host.v4.netmask }}"
+{% else %}
 push "route {{ networks.pihole.v4.netaddress }} {{ networks.pihole.v4.netmask }}"
 {% endif %}
-{% if openvpn.conf.server.route_home_network or pihole.use_host_net %}
-push "route {{ networks.host.v4.netaddress }} {{ networks.host.v4.netmask }}"
-{%   if networks.vpn.v6.enable %}
+push "route {{ networks.vpn.v4.netaddress }} {{ networks.vpn.v4.netmask }}"
+
+{% if networks.vpn.v6.enable %}
+{%   if pihole.use_host_net %}
 push "route-ipv6 {{ networks.host.v6.subnet }}"
+{%   else %}
+push "route-ipv6 {{ networks.pihole.v6.subnet }}"
 {%   endif %}
+push "route-ipv6 {{ networks.vpn.v6.subnet }}"
 {% endif %}
 
 ### Push Configurations Below
@@ -60,3 +66,6 @@ push "dhcp-option DNS {{ pihole_ipam.ipam.ipv4 }}"
 push "dhcp-option DNS {{ pihole_ipam.ipam.ipv6 }}"
 {% endif %}
 push "comp-lzo no"
+{% if networks.vpn.v6.enable %}
+push "tun-ipv6"
+{% endif %}
