--- a/roles/docker/tasks/debian_platforms.yml
+++ b/roles/docker/tasks/debian_platforms.yml
@@ -42,7 +42,7 @@
 
 - name: Install Docker
   apt:
-    name: [ 'docker-ce', 'docker-ce-cli', 'containerd.io' ]
+    name: [ 'docker-ce', 'docker-ce-cli', 'containerd.io', 'docker-compose' ]
     state: latest
     update_cache: yes
     # aufs-dkms does not work with RPI (no kernel support for it)
