--- a/roles/docker/tasks/rasbian_stretch.yml
+++ b/roles/docker/tasks/rasbian_stretch.yml
@@ -19,3 +19,12 @@
     state: latest
     update_cache: yes
   notify: restart computer
+
+- name: Install docker-compose
+  pip:
+    name: docker-compose
+    state: latest
+    executable: "{{ item }}"
+  with_items:
+    - pip
+    - pip3
