--- a/roles/pihole/templates/10-custom-dns.conf
+++ b/roles/pihole/templates/10-custom-dns.conf
@@ -1,6 +1,5 @@
-address=/pihole.home/{{ pihole.ipv4 }}
-{% if pihole.use_host_net %}
-address=/pihole.home/{{ host.ipv6 }}
-{% elif networks.pihole.v6.enable %}
-address=/pihole.home/{{ pihole.ipv6 }}
+{% import "pihole_ipam.jinja2" as pihole_ipam with context %}
+address=/pihole.home/{{ pihole_ipam.ipam.ipv4 }}
+{% if networks.pihole.v6.enable %}
+address=/pihole.home/{{ pihole_ipam.ipam.ipv6 }}
 {% endif %}
