set vim colorscheme

--- a/roles/base_system/tasks/main.yml
+++ b/roles/base_system/tasks/main.yml
@@ -24,19 +24,8 @@
       - curl
       - ntp
 
-- name: Enable syntax highlighting in vim
-  lineinfile:
-    dest: /etc/vim/vimrc
-    regexp: '^syn'
-    line: 'syntax on'
-    create: true
-
-- name: Enable line endings in vim
-  lineinfile:
-    dest: /etc/vim/vimrc
-    regexp: '^set nu'
-    line: 'set nu'
-    create: true
+- include: vim.yml
+  tags: vim
 
 - name: Disable password authentication for ssh
   lineinfile: >
