--- a/roles/pihole/tasks/create.pihole.user.yml
+++ b/roles/pihole/tasks/create.pihole.user.yml
@@ -1,4 +1,4 @@
-- name: Create pihole user
+- name: "Create {{ user }} user"
   user:
     name: "{{ user }}"
     state: present
@@ -8,6 +8,16 @@
     password: "{{ lookup('template', 'standard_pw_gen.jinja2', template_vars=dict(name=user)) | password_hash('sha512') }}"
     update_password: always
   tags: pw
+
+- name: "Create {{ pihole.user }} user"
+  user:
+    name: "{{ pihole.user }}"
+    state: present
+    shell: /bin/bash
+    group: "{{ user }}"
+    create_home: no
+    password: "{{ lookup('template', 'standard_pw_gen.jinja2', template_vars=dict(name=pihole.user)) | password_hash('sha512') }}"
+    update_password: always
 
 - name: Create pihole directory
   file:
