--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -22,7 +22,7 @@ networks:
       netmask: 255.255.255.0
       gateway: 172.16.1.1
     v6:
-      enable: "{{ True if 'development' not in group_names else False }}"
+      enable: "{{ host.supports_v6 }}"
       subnet: 2a02:120b:2c06:57df::/64
       netmask: 64
       gateway: 2a02:120b:2c06:57d0:7eb7:33ff:fed0:41a6
@@ -35,11 +35,19 @@ networks:
       netmask: 255.255.255.0
       gateway: 172.16.2.1
     v6:
-      enable: yes
+      enable: "{{ host.supports_v6 }}"
       subnet: 2a02:120b:2c06:57de::/64
       netmask: 64
       gateway: 2a02:120b:2c06:57d0:7eb7:33ff:fed0:41a6
     name: vpn-net
+
+  unbound:
+    v4:
+      subnet: 172.16.3.0/24
+      netaddress: 172.16.3.0
+      netmask: 255.255.255.0
+      gateway: 172.16.3.1
+    name: unbound-net
 
 volumes:
   pihole:
@@ -61,21 +69,29 @@ volumes:
       name: main_config
       local_folder: "{{ root_dirs.netdata }}/etc-netdata"
       mount: /etc/netdata
+  unbound:
+    main:
+      name: unbound_config
+      local_folder: "{{ root_dirs.pihole }}/etc-unbound"
+      mount: /opt/unbound/etc/unbound
 
 pihole:
   user: pihole
   name: pihole
   ipv4: 172.16.1.20
   ipv6: 2a02:120b:2c06:57df::20
-  use_host_net: yes # "{{ True if 'development' not in group_names else False }}"
+  use_host_net: yes
   network: "{{ networks.pihole }}"
+  volumes: "{{ volumes.pihole }}"
 
 openvpn:
   name: openvpn
+  user: "{{ user }}"
   ipv4: 172.16.2.20
   ipv6: 2a02:120b:2c06:57de::20
-  use_host_net: no # "{{ True if 'development' not in group_names else False }}"
+  use_host_net: no
   network: "{{ networks.vpn }}"
+  volumes: "{{ volumes.vpn }}"
 
   conf:
     dns: vpn.realmar.net
@@ -96,7 +112,32 @@ openvpn:
 netdata:
   name: netdata
   user: netdata
+  volumes: "{{ volumes.netdata }}"
+
+unbound:
+  name: unbound
+  user: unbound
+  ipv4: 172.16.3.20
+  port: 25353
+  use_host_net: no
+  network: "{{ networks.unbound }}"
+  volumes: "{{ volumes.unbound }}"
 
 containers:
   - "{{ pihole }}"
   - "{{ openvpn }}"
+  - "{{ netdata }}"
+  - "{{ unbound }}"
+
+__flat_volumes_tmp: |
+  {% set vols = [] %}
+  {% for c in containers %}
+    {% for k, vol in c.volumes.items() %}
+      {% set x = vols.append({'container': c, 'volume': vol}) %}
+    {% endfor %}
+  {% endfor %}
+  {{ vols|to_json }}
+
+# if we dont do that, then ansible will interpret the list as string
+# doing {{ vols|to_json|from_json }} doesnt work neither
+flat_volumes: "{{ __flat_volumes_tmp|from_json }}"
