--- a/roles/pihole/tasks/docker_network.yml
+++ b/roles/pihole/tasks/docker_network.yml
@@ -3,11 +3,11 @@
   vars:
     network: "{{ item.network }}"
   loop: "{{ containers }}"
-  when: item.use_host_net
+  when: item.network is defined and item.use_host_net
 
 - name: Create docker networks
   include_tasks: add_docker_network.yml
   vars:
     network: "{{ item.network }}"
   loop: "{{ containers }}"
-  when: item.use_host_net == false
+  when: item.network is defined and item.use_host_net == false
