--- a/roles/base_system/tasks/main.yml
+++ b/roles/base_system/tasks/main.yml
@@ -74,6 +74,12 @@
 
 - include: swap.yml
 
+- name: Copy resolv.conf
+  template:
+    src: resolv.conf
+    dest: /etc/resolv.conf
+    mode: 0644
+
 - name: Update and upgrade packages
   apt:
     upgrade: safe
