--- a/roles/unbound/templates/unbound.conf
+++ b/roles/unbound/templates/unbound.conf
@@ -54,22 +54,22 @@ server:
     ###########################################################################
 
     # Do not print log lines to inform about local zone actions
-    log-local-actions: no
+    log-local-actions: yes
 
     # Do not print one line per query to the log
-    log-queries: no
+    log-queries: yes
 
     # Do not print one line per reply to the log
-    log-replies: no
+    log-replies: yes
 
     # Do not print log lines that say why queries return SERVFAIL to clients
-    log-servfail: no
+    log-servfail: yes
 
     # Further limit logging
-    logfile: /dev/null
+    logfile: "/opt/unbound/etc/unbound/var/unbound.log"
 
     # Only log errors
-    verbosity: 0
+    verbosity: 1
 
     ###########################################################################
     # PRIVACY SETTINGS
