--- a/roles/base_system/tasks/network.yml
+++ b/roles/base_system/tasks/network.yml
@@ -20,6 +20,16 @@
   template:
     src: interfaces
     dest: /etc/network/interfaces
+  tags: net_conf
+  notify: restart computer
+
+- name: Copy sysctl config for static ipv6
+  template:
+    src: ipv6-sysctl.conf
+    dest: /etc/sysctl.d/80-ipv6.conf
+    mode: 0644
+  when: host.supports_v6
+  tags: net_conf
   notify: restart computer
 
 - meta: flush_handlers
