--- a/roles/vpn/templates/openvpn.conf
+++ b/roles/vpn/templates/openvpn.conf
@@ -1,11 +1,11 @@
 {% import "pihole_ipam.jinja2" as pihole_ipam with context %}
 
-server {{ openvpn.conf.server.netaddress }} {{ openvpn.conf.server.netmask }}
+server {{ openvpn.conf.server.v4.netaddress }} {{ openvpn.conf.server.v4.netmask }}
 {% if networks.vpn.v6.enable %}
 {%   if openvpn.use_host_net %}
 server-ipv6 {{ networks.host.v6.subnet }}
 {%   else %}
-server-ipv6 {{ networks.vpn.v6.subnet }}
+server-ipv6 {{ openvpn.conf.server.v6.netaddress }}/{{ openvpn.conf.server.v6.netmask }}
 {%   endif %}
 
 tun-ipv6
